--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -11,4 +11,17 @@
             <td>{{ans.brandName}}</td>
         </tr>
     </table>
+
+    <table class="table">
+        <tr>
+            <th>name</th>
+            <th>price</th>
+            <th>brand</th>
+        </tr>
+        <tr *ngFor="let ans of myData1">
+            <td>{{ans.userId}}</td>
+            <td>{{ans.id}}</td>
+            <td>{{ans.title}}</td>
+        </tr>
+    </table>
 </div>
